--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@types/chart.js": "^2.7.55",
+    "angular-bootstrap-md": "^7.5.4",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
     "firebase": "^6.2.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.8.3",
     "popper.js": "^1.15.0",
